--- a/portal_backend/login/templates/login/loginindex.html
+++ b/portal_backend/login/templates/login/loginindex.html
@@ -450,7 +450,7 @@
   <script src="{% static '/vendor/isotope-layout/isotope.pkgd.min.js' %}"></script>
   <script src="{% static '/vendor/nivo-slider/js/jquery.nivo.slider.js' %}"></script>
   <script src="{% static '/vendor/owl.carousel/owl.carousel.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/venobox/venobox.min.js' %}"></script>
+  <script src="{% static '/vendor/venobox/venobox.min.js' %}"></script>
 
   <!-- Template Main JS File -->
   <script src="{% static '/js/main.js' %}"></script>
